syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "AbilityAppliedAbility.proto";


message AbilityMetaAddAbility {
	AbilityAppliedAbility ability = 11;
}